--- a/WebHooks/index.html
+++ b/WebHooks/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div id="wrapper">
+        <div class="header">
+            <img src="Discord_Logo.png" alt="" class="header__logo">
+            <h1 class="header__title">Softo Cloud <span>Discord WebHooks</span></h1>
+        </div>
         <div class="form">
             <div id="enter-pass">
                 <input type="text" class="form__input" id="password" placeholder="Введите пароль*">
